trunk/Archive2/00/985dcc66b7ab99/output
main.cpp: In function 'int main()':
main.cpp:41:7: error: use of deleted function 'A& A::operator=(const A&)'
     a = b;
       ^
main.cpp:7:8: note: declared here
     A& operator=(A const& a) = delete;
        ^
